ui/k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: finna-app-ui
spec:
  selector:
    app: finna-app-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
